--- a/GymManagementSystem/frontend/src/pages/Threedayworkout/AddWorkoutForm.css
+++ b/GymManagementSystem/frontend/src/pages/Threedayworkout/AddWorkoutForm.css
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   text-align: center;
   padding: 30px;
+  background-size: cover;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
