--- a/GymManagementSystem/frontend/src/pages/TwodayWorkout/AddWorkoutForm.css
+++ b/GymManagementSystem/frontend/src/pages/TwodayWorkout/AddWorkoutForm.css
@@ -1,18 +1,23 @@
 .container {
   background-image: url("https://img.freepik.com/free-photo/young-fitness-man-studio_7502-5008.jpg?w=1060&t=st=1712555236~exp=1712555836~hmac=29129c1bbb79b08a36ee3ba54b50d2fec9ef740eec19d9eb74340661e216f63d");
-  background-color: rgb(235, 235, 241);
-  background-position:center;
+  background-color: rgba(235, 235, 241, 0); 
+  background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
   text-align: center;
   padding: 30px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+
 .h1 {
   color: #007bff;
 }
-
+.form{
+  background-color:#f5f3f389;
+  opacity: 0.8;
+}
 .label {
   color: #f6f1f1;
   font-size: 20px;
