--- a/GymManagementSystem/frontend/src/pages/Threedayworkout/AddWorkoutForm.css
+++ b/GymManagementSystem/frontend/src/pages/Threedayworkout/AddWorkoutForm.css
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   text-align: center;
   padding: 30px;
+  
   background-size: cover;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -15,15 +16,12 @@
 }
 
 .label {
-  color: #f6f1f1;
+  color: #100f0f;
   font-size: 20px;
   font-family: 'Times New Roman', Times, serif;
 }
 .label1{
   width: 1000px;
-}
-.label2{
-  color: #f5f5f5;
 }
 
 .select {
@@ -46,7 +44,12 @@
   margin: 10px auto;
   padding: 10px;
   border-radius: 5px;
+  
 }
+.label2{
+  color: #f5f5f5;
+}
+
 
 .input
  {
@@ -87,4 +90,28 @@
 
 .text-center {
   text-align: center;
+}
+.generated-pdf {
+  margin-top: 20px;
+}
+
+.generated-pdf-heading {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.download-pdf-button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+  text-decoration: none; /* Remove underline */
+  display: inline-block;
+  margin-top: 10px;
+}
+
+.download-pdf-button:hover {
+  background-color: #0056b3;
 }
