--- a/GymManagementSystem/frontend/src/pages/TwodayWorkout/AddWorkoutForm.css
+++ b/GymManagementSystem/frontend/src/pages/TwodayWorkout/AddWorkoutForm.css
@@ -1,33 +1,32 @@
 .container {
   background-image: url("https://img.freepik.com/free-photo/young-fitness-man-studio_7502-5008.jpg?w=1060&t=st=1712555236~exp=1712555836~hmac=29129c1bbb79b08a36ee3ba54b50d2fec9ef740eec19d9eb74340661e216f63d");
-  background-color: rgba(235, 235, 241, 0); 
-  background-position: center;
+  background-color: rgb(235, 235, 241);
+  background-position:center;
   background-repeat: no-repeat;
-  background-size: cover;
   text-align: center;
   padding: 30px;
+  
+  background-size: cover;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
-  color: #007bff; /* Fixed class name */
-}
-
-.form {
-  background-color:#f5f3f389;
-  opacity: 0.8;
-  padding: 20px;
-  border-radius: 8px;
+.h1 {
+  color: #007bff;
 }
 
 .label {
-  color: #f4f1f1;
+  color: #100f0f;
   font-size: 20px;
   font-family: 'Times New Roman', Times, serif;
 }
+.label1{
+  width: 1000px;
+}
 
-.select, .input, .input1, .input3 {
+.select {
+  font: inherit;
+  color: #080707;
   background-color: #fff;
   border: 1px solid #007bff;
   border-radius: 5px;
@@ -36,11 +35,44 @@ h1 {
   width: 50%;
 }
 
-.input1, .input3 {
+.label1 {
+  background-color: #f5f5f5;
+  opacity: 0.8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px auto;
+  padding: 10px;
+  border-radius: 5px;
+  
+}
+.label2{
+  color: #f5f5f5;
+}
+
+
+.input
+ {
+  background-color: #fff;
+  border: 1px solid #007bff;
+  border-radius: 5px;
+  padding: 8px;
+  margin: 10px auto;
+  width: 50%;
+}
+.input1,
+.input3{
+  background-color: #fff;
+  border: 1px solid #007bff;
+  border-radius: 5px;
+  padding: 8px;
+  margin: 10px auto;
   width: 15%;
 }
 
-.button1, .button2, .button3 {
+.button1,
+.button2,
+.button3 {
   padding: 10px 20px;
   background-color: #007bff;
   color: #fff;
@@ -58,4 +90,28 @@ h1 {
 
 .text-center {
   text-align: center;
+}
+.generated-pdf {
+  margin-top: 20px;
+}
+
+.generated-pdf-heading {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.download-pdf-button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+  text-decoration: none; /* Remove underline */
+  display: inline-block;
+  margin-top: 10px;
+}
+
+.download-pdf-button:hover {
+  background-color: #0056b3;
 }
