--- a/GymManagementSystem/frontend/src/pages/oneday/AddWorkoutForm.css
+++ b/GymManagementSystem/frontend/src/pages/oneday/AddWorkoutForm.css
@@ -91,3 +91,27 @@
 .text-center {
   text-align: center;
 }
+.generated-pdf {
+  margin-top: 20px;
+}
+
+.generated-pdf-heading {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.download-pdf-button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+  text-decoration: none; /* Remove underline */
+  display: inline-block;
+  margin-top: 10px;
+}
+
+.download-pdf-button:hover {
+  background-color: #0056b3;
+}
