--- a/GymManagementSystem/frontend/src/pages/Threedayworkout/AddWorkoutForm.css
+++ b/GymManagementSystem/frontend/src/pages/Threedayworkout/AddWorkoutForm.css
@@ -47,7 +47,8 @@
   
 }
 .label2{
-  color: #f5f5f5;
+  color: #090808;
+  font-size: 25px;
 }
 
 
@@ -75,7 +76,7 @@
 .button3 {
   padding: 10px 20px;
   background-color: #007bff;
-  color: #fff;
+  color: #fffdfd;
   border: none;
   border-radius: 5px;
   cursor: pointer;
