--- a/GymManagementSystem/frontend/src/pages/oneday/AddWorkoutForm.css
+++ b/GymManagementSystem/frontend/src/pages/oneday/AddWorkoutForm.css
@@ -1,6 +1,5 @@
 .container {
-  background-image: url("https://img.freepik.com/free-photo/young-fitness-man-studio_7502-5008.jpg?w=1060&t=st=1712555236~exp=1712555836~hmac=29129c1bbb79b08a36ee3ba54b50d2fec9ef740eec19d9eb74340661e216f63d");
-  background-color: rgb(235, 235, 241);
+  background-image: url("https://img.freepik.com/free-photo/young-fitness-man-studio_7502-5008.jpg?w=1060&t=st=1712555236~exp=1712555836~hmac=29129c1bbb79b08a36ee3ba54b50d2fec9ef740eec19d9eb74340661e216f63d");background-color: rgb(235, 235, 241);
   background-position:center;
   background-repeat: no-repeat;
   text-align: center;
