--- a/GymManagementSystem/frontend/src/pages/Threedayworkout/AddWorkoutForm.css
+++ b/GymManagementSystem/frontend/src/pages/Threedayworkout/AddWorkoutForm.css
@@ -1,5 +1,6 @@
 .container {
-  background-image: url("https://img.freepik.com/free-photo/young-fitness-man-studio_7502-5008.jpg?w=1060&t=st=1712555236~exp=1712555836~hmac=29129c1bbb79b08a36ee3ba54b50d2fec9ef740eec19d9eb74340661e216f63d");
+  
+  background-image: url("https://images.pexels.com/photos/3752745/pexels-photo-3752745.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
   background-color: rgb(235, 235, 241);
   background-position:center;
   background-repeat: no-repeat;
