--- a/Gym_Management_System/frontend/src/Pages/Threedayworkout/AddWorkoutForm.css
+++ b/Gym_Management_System/frontend/src/Pages/Threedayworkout/AddWorkoutForm.css
@@ -1,4 +1,4 @@
-.container {
+.container1 {
   
   background-image: url("https://images.pexels.com/photos/3752745/pexels-photo-3752745.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
   background-color: rgb(235, 235, 241);
